<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:text="@string/nanodegree_apps"/>

    <Button
        android:id="@+id/spotify_streamer_btn"
        android:text="@string/spotify_streamer" android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="#F08C35"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/scores_app_btn"
        android:text="@string/scores_app" android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="#F08C35"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/library_app_btn"
        android:text="@string/library_app" android:layout_width="match_parent"
        android:layout_margin="10dp"

        android:background="#F08C35"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/build_it_bigger_btn"

        android:text="@string/build_it_bigger" android:layout_width="match_parent"
        android:layout_margin="10dp"

        android:background="#F08C35"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/xyz_reader_btn"
        android:text="@string/xyz_reader" android:layout_width="match_parent"
        android:layout_margin="10dp"

        android:background="#F08C35"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/capstone_btn"

        android:text="@string/capstone" android:layout_width="match_parent"
        android:layout_margin="10dp"

        android:background="#fff04300"
        android:layout_height="wrap_content" />

</LinearLayout>
